[package]
name = "emojicons-2021"
version = "2.0.1"
edition = "2021"
authors = ["Jiří Šebele <sindriava@gmail.com>", "funnsam <funnsam8@gmail.com>"]

description = "Parse :emoji: notation to unicode representation."
repository = "https://github.com/funnsam/rust-emojicons"
readme = "README.md"
license = "MIT"

[dependencies]
emojis = "0.6.3"
regex = "1.10.6"
